Mit Colab erstellt

--- a/1.07_NaiveExactMatching-MatchingRealReads.ipynb
+++ b/1.07_NaiveExactMatching-MatchingRealReads.ipynb
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "OzYkNcBlnVJE"
       },
@@ -97,13 +97,12 @@
         "        for line in f:\n",
         "            if not line[0] == '>':\n",
         "                genome += line.rstrip()\n",
-        "\n",
         "    return genome"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "WYT0B0hJnVJE"
       },
@@ -114,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "CCtYDmFBnVJE"
       },
@@ -126,14 +125,21 @@
         "    param: t text to search in\n",
         "    returns: list of occurences\n",
         "    \"\"\"\n",
-        "    # copy from notebook 1.06\n",
-        "\n",
+        "    occurrences = []\n",
+        "    for i in range(len(t)-len(p)):\n",
+        "      match = True\n",
+        "      for j in range(len(p)):\n",
+        "        if t[i+j] != p[j]:\n",
+        "          match = False\n",
+        "          break\n",
+        "      if match:\n",
+        "        occurrences.append(i)\n",
         "    return occurrences"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "2Auxer67nVJF"
       },
@@ -147,18 +153,47 @@
         "    param: readLen defines the length of each read\n",
         "    returns: list containing the generated reads\n",
         "    \"\"\"\n",
-        "    # copy from notebook 1.06\n",
+        "    reads = []\n",
+        "    for _ in range(numReads):\n",
+        "        start = random.randint(0, len(genome)-readLen) - 1\n",
+        "        reads.append(genome[start : start+readLen])\n",
         "\n",
         "    return reads"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "UJ8aLr_gnVJF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UJ8aLr_gnVJF",
+        "outputId": "d23900f9-5bbf-4884-81c5-13b462c49ba7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "...\n",
+            "----------------------------------------------------------------------\n",
+            "Ran 3 tests in 0.011s\n",
+            "\n",
+            "OK\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<unittest.runner.TextTestResult run=3 errors=0 failures=0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ],
       "source": [
         "tests = TestMatchingArtificialReads()\n",
         "suite = unittest.TestSuite()\n",
@@ -170,12 +205,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "GGMLwmzcnVJG"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GGMLwmzcnVJG",
+        "outputId": "fce98e18-f121-4139-f822-6e485ca0b801"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 / 100 reads matched the genome exactly!\n"
+          ]
+        }
+      ],
       "source": [
+        "genome = readGenome(\"phix.fa\")\n",
+        "\n",
         "# Generate 100 reads of length 100\n",
         "reads = generateReads(genome, 100, 100)\n",
         "\n",
@@ -190,11 +239,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "BxYjnHgDnVJH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BxYjnHgDnVJH",
+        "outputId": "91052048-21a2-4f26-b438-863ee52931cc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-11-18 14:22:28--  http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/ERR266411_1.first1000.fastq\n",
+            "Resolving d28rh4a8wq0iu5.cloudfront.net (d28rh4a8wq0iu5.cloudfront.net)... 13.225.141.205, 13.225.141.183, 13.225.141.118, ...\n",
+            "Connecting to d28rh4a8wq0iu5.cloudfront.net (d28rh4a8wq0iu5.cloudfront.net)|13.225.141.205|:80... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 254384 (248K) [audio/mpeg]\n",
+            "Saving to: ‘ERR266411_1.first1000.fastq’\n",
+            "\n",
+            "ERR266411_1.first10 100%[===================>] 248.42K  1.24MB/s    in 0.2s    \n",
+            "\n",
+            "2024-11-18 14:22:29 (1.24 MB/s) - ‘ERR266411_1.first1000.fastq’ saved [254384/254384]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# On Windows you have to manually download the file\n",
         "!wget http://d28rh4a8wq0iu5.cloudfront.net/ads1/data/ERR266411_1.first1000.fastq"
@@ -202,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "wMp_opNEnVJH"
       },
@@ -214,17 +285,47 @@
         "    returns: list containing all the dna sequences from the fastq file\n",
         "    \"\"\"\n",
         "    sequences = []\n",
-        "\n",
+        "    with open(filename, \"r\") as fh:\n",
+        "        lines = fh.readlines()\n",
+        "        for line in lines[1:-1:4]:\n",
+        "            seq = line.rstrip()\n",
+        "            sequences.append(seq)\n",
         "    return sequences"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "_JBXaUCNnVJI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_JBXaUCNnVJI",
+        "outputId": "5a8f8287-4428-49cf-dd09-8ab8b14b5fa9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            ".\n",
+            "----------------------------------------------------------------------\n",
+            "Ran 1 test in 0.013s\n",
+            "\n",
+            "OK\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ],
       "source": [
         "tests = TestMatchingArtificialReads()\n",
         "suite = unittest.TestSuite()\n",
@@ -234,11 +335,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
-        "id": "XCo4FQpOnVJI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XCo4FQpOnVJI",
+        "outputId": "7274b6f4-3c74-470e-87da-82da93e18413"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5386 / 5386 reads matched the genome exactly!\n"
+          ]
+        }
+      ],
       "source": [
         "numMatched = 0\n",
         "n = 0\n",
@@ -252,11 +365,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "_JfM3OyinVJI"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_JfM3OyinVJI",
+        "outputId": "718768f9-5091-437c-ae37-1483ac6de3d1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5386 / 5386 reads matched the genome exactly!\n"
+          ]
+        }
+      ],
       "source": [
         "# Now let's try matching just the first 30 bases of each read\n",
         "numMatched = 0\n",
@@ -272,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "3JN4Ot8AnVJJ"
       },
@@ -288,11 +413,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "ff2sq-q0nVJJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ff2sq-q0nVJJ",
+        "outputId": "9d50a903-5d51-47ee-90a6-a71711e004cc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5386 / 5386 reads matched the genome exactly!\n"
+          ]
+        }
+      ],
       "source": [
         "numMatched = 0\n",
         "n = 0\n",
