Mit Colab erstellt

--- a/2_01_BoyerMoore.ipynb
+++ b/2_01_BoyerMoore.ipynb
@@ -227,19 +227,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "fyvZzpSxnqCx",
-        "outputId": "97622e87-7319-431a-bdbf-f9eefa0765a9"
+        "outputId": "4c94d6f4-6bdb-4103-c2f2-7b41150fa751"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2"
             ]
           },
-          "execution_count": 3,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 3
         }
       ],
       "source": [
@@ -253,19 +256,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "RhqCm45dnqCy",
-        "outputId": "5a05a1ab-2afd-423e-f3c5-92ef5f90005a"
+        "outputId": "94bde2ba-1436-47a5-989d-494a8dad806c"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "3"
             ]
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 4
         }
       ],
       "source": [
@@ -280,19 +286,22 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "dkZZf3OhnqCz",
-        "outputId": "fd6056cd-508a-483d-8e1e-15a929e20a4c"
+        "outputId": "563d4866-ba1f-4c4f-f5ab-967e0db54777"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2"
             ]
           },
-          "execution_count": 7,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 5
         }
       ],
       "source": [
@@ -323,62 +332,70 @@
       },
       "outputs": [],
       "source": [
-        "def boyer_moore(p, p_bm, t):\n",
+        "def boyer_moore(pattern, p_bm, text):\n",
         "    \"\"\" Do Boyer-Moore matching\n",
         "    param p: search pattern\n",
         "    param p_bm: Preprocessing object for boyer moore algorithm\n",
         "    param t: text\n",
         "    returns: list containing the occurences\n",
         "    \"\"\"\n",
-        "    i = 0\n",
         "    occurrences = []\n",
         "\n",
-        "    return occurrences"
+        "    n = len(text)\n",
+        "    m = len(pattern)\n",
+        "    i = 0  # Initialize text index\n",
+        "\n",
+        "    while i <= n - m:\n",
+        "        j = m - 1  # Initialize pattern index to the end\n",
+        "\n",
+        "        # Compare pattern and text characters, starting from the end\n",
+        "        while j >= 0 and pattern[j] == text[i + j]:\n",
+        "            j -= 1\n",
+        "\n",
+        "        # If pattern is found (j < 0)\n",
+        "        if j < 0:\n",
+        "            occurrences.append(i)\n",
+        "            i += p_bm.match_skip()  # Apply good suffix rule for match\n",
+        "        else:\n",
+        "            # Apply bad character rule and good suffix rule for mismatch\n",
+        "            i += max(p_bm.bad_character_rule(j, text[i + j]),\n",
+        "                     p_bm.good_suffix_rule(j))\n",
+        "\n",
+        "    return occurrences\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "56U6EAq-nqC1",
-        "outputId": "48d017da-d1b4-4f6c-c935-71693fd9cf7c"
+        "outputId": "60a1322c-97d9-4504-c9ab-83ba1bf6b367"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "F\n",
-            "======================================================================\n",
-            "FAIL: test_boyermoore (__main__.TestMatchingArtificialReads)\n",
+            ".\n",
             "----------------------------------------------------------------------\n",
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-9-004db4221b98>\", line 8, in test_boyermoore\n",
-            "    self.assertEqual(boyer_moore(p, p_bm, t), [1, 5, 7, 15], 'BoyerMoore Algorithm returned wrong match indices. Should be: [1, 5, 7, 15], values returned: {}'.format(boyer_moore(p, p_bm, t)))\n",
-            "AssertionError: Lists differ: [] != [1, 5, 7, 15]\n",
+            "Ran 1 test in 0.003s\n",
             "\n",
-            "Second list contains 4 additional elements.\n",
-            "First extra element 0:\n",
-            "1\n",
-            "\n",
-            "- []\n",
-            "+ [1, 5, 7, 15] : BoyerMoore Algorithm returned wrong match indices. Should be: [1, 5, 7, 15], values returned: []\n",
-            "\n",
-            "----------------------------------------------------------------------\n",
-            "Ran 1 test in 0.002s\n",
-            "\n",
-            "FAILED (failures=1)\n"
+            "OK\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.runner.TextTestResult run=1 errors=0 failures=1>"
+              "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
             ]
           },
-          "execution_count": 11,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 98
         }
       ],
       "source": [
@@ -406,10 +423,24 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "collapsed": true,
-        "id": "NC8sWH5GnqC1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NC8sWH5GnqC1",
+        "outputId": "8c3b9511-2f4f-4b7d-80e3-bd97df664696"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 5, 7, 15]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ],
       "source": [
         "boyer_moore(p, p_bm, t)"
       ]
