Mit Colab erstellt

--- a/2.02_SubstringIndex.ipynb
+++ b/2.02_SubstringIndex.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "collapsed": true,
         "id": "vbiIgrX255Xp"
@@ -25,12 +25,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
-        "id": "3pISqLC155Xq"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        },
+        "id": "3pISqLC155Xq",
+        "outputId": "47aaa013-147b-4f86-c799-34f7feeaf246"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "invalid syntax (<ipython-input-2-5e99a92c3a65>, line 23)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-5e99a92c3a65>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    kmer =\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
         "'''Index Class'''\n",
         "class Index(object):\n",
@@ -42,7 +56,8 @@
         "        self.k = k\n",
         "        self.index = []\n",
         "        # build k-mer index and append substring to index list\n",
-        "\n",
+        "        for i in range(0, len(t) - k + 1):\n",
+        "            self.index.append(t[i:i+k])\n",
         "\n",
         "        # alphabetize by k-mer for using bisect\n",
         "        self.index.sort()\n",
@@ -53,18 +68,17 @@
         "        returns: 1st index hit for p in index'''\n",
         "        # query with first k-mer of pattern p\n",
         "        # select kmer of pattern p\n",
-        "        kmer =\n",
+        "        kmer = 0\n",
         "        # do binary search in index\n",
-        "        i =\n",
+        "        i = 0\n",
         "        hits = []\n",
         "        # collect matching index entries\n",
-        "\n",
         "        return hits"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "collapsed": true,
         "id": "jSp-DF2255Xr"
@@ -83,7 +97,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "collapsed": true,
         "id": "lBVhLydf55Xs"
@@ -96,23 +110,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 179
+        },
         "id": "UhYL-TN155Xs",
-        "outputId": "f79dd666-b66e-4db8-8d60-bf2832b1663e"
+        "outputId": "5e9208d1-f5ab-4429-9a85-7d4c30546772"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[21, 68]\n"
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'Index' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-94b10a855f9f>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqueryIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Index' is not defined"
           ]
         }
       ],
       "source": [
         "index = Index(t, 4)\n",
-        "print(queryIndex(p, t, index))"
+        "print(queryIndex(p, t, index)) // 21 68"
       ]
     },
     {
@@ -126,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "collapsed": true,
         "id": "RK1-MQ8r55Xt"
