--- a/2.02_SubstringIndex.ipynb
+++ b/2.02_SubstringIndex.ipynb
@@ -25,26 +25,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 40,
       "metadata": {
         "collapsed": true,
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 126
-        },
-        "id": "3pISqLC155Xq",
-        "outputId": "47aaa013-147b-4f86-c799-34f7feeaf246"
+        "id": "3pISqLC155Xq"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-2-5e99a92c3a65>, line 23)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-5e99a92c3a65>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    kmer =\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "'''Index Class'''\n",
         "class Index(object):\n",
@@ -58,7 +44,7 @@
         "        # build k-mer index and append substring to index list\n",
         "        for i in range(0, len(t) - k + 1):\n",
         "            self.index.append(t[i:i+k])\n",
-        "\n",
+        "        self.index = list(dict.fromkeys(self.index))\n",
         "        # alphabetize by k-mer for using bisect\n",
         "        self.index.sort()\n",
         "\n",
@@ -68,17 +54,27 @@
         "        returns: 1st index hit for p in index'''\n",
         "        # query with first k-mer of pattern p\n",
         "        # select kmer of pattern p\n",
-        "        kmer = 0\n",
+        "        kmer = p[:self.k]\n",
         "        # do binary search in index\n",
         "        i = 0\n",
         "        hits = []\n",
+        "\n",
         "        # collect matching index entries\n",
         "        return hits"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "source": [],
+      "metadata": {
+        "id": "P7J-dv4pEJmZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
       "metadata": {
         "collapsed": true,
         "id": "jSp-DF2255Xr"
@@ -90,14 +86,12 @@
         "    k = index.k\n",
         "    offsets = []\n",
         "\n",
-        "\n",
-        "\n",
         "    return offsets"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 14,
       "metadata": {
         "collapsed": true,
         "id": "lBVhLydf55Xs"
@@ -110,31 +104,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 42,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 179
+          "base_uri": "https://localhost:8080/"
         },
         "id": "UhYL-TN155Xs",
-        "outputId": "5e9208d1-f5ab-4429-9a85-7d4c30546772"
+        "outputId": "6be9d48b-873e-45e5-f89e-80bf69dea54c"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'Index' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-94b10a855f9f>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mqueryIndex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'Index' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[36, 36]\n",
+            "[]\n"
           ]
         }
       ],
       "source": [
         "index = Index(t, 4)\n",
-        "print(queryIndex(p, t, index)) // 21 68"
+        "print(index.query(p))\n",
+        "print(queryIndex(p, t, index)) # 21 68"
       ]
     },
     {
@@ -160,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "collapsed": true,
         "id": "9KfmPTnf55Xu"
@@ -178,40 +169,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "pNHIr6ci55Xv",
-        "outputId": "18ca869a-c3d3-4b8d-bd39-88e255c4825a"
+        "outputId": "ec55de95-9524-492e-a621-9c8ff6363162"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "E\n",
+            "F\n",
             "======================================================================\n",
-            "ERROR: testQueryIndex (__main__.MyTest)\n",
+            "FAIL: testQueryIndex (__main__.MyTest)\n",
             "----------------------------------------------------------------------\n",
             "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-2-80a0d1f3c122>\", line 7, in testQueryIndex\n",
+            "  File \"<ipython-input-27-80a0d1f3c122>\", line 7, in testQueryIndex\n",
             "    self.assertEqual([21, 68], queryIndex(p, t, index))\n",
-            "NameError: name 'queryIndex' is not defined\n",
+            "AssertionError: Lists differ: [21, 68] != []\n",
+            "\n",
+            "First list contains 2 additional elements.\n",
+            "First extra element 0:\n",
+            "21\n",
+            "\n",
+            "- [21, 68]\n",
+            "+ []\n",
             "\n",
             "----------------------------------------------------------------------\n",
-            "Ran 1 test in 0.001s\n",
+            "Ran 1 test in 0.002s\n",
             "\n",
-            "FAILED (errors=1)\n"
+            "FAILED (failures=1)\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.runner.TextTestResult run=1 errors=1 failures=0>"
+              "<unittest.runner.TextTestResult run=1 errors=0 failures=1>"
             ]
           },
-          "execution_count": 5,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 28
         }
       ],
       "source": [
