--- a/2.02_SubstringIndex.ipynb
+++ b/2.02_SubstringIndex.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 43,
       "metadata": {
         "collapsed": true,
         "id": "3pISqLC155Xq"
@@ -56,25 +56,20 @@
         "        # select kmer of pattern p\n",
         "        kmer = p[:self.k]\n",
         "        # do binary search in index\n",
-        "        i = 0\n",
-        "        hits = []\n",
+        "        i = bisect.bisect_left(self.index, kmer)\n",
         "\n",
-        "        # collect matching index entries\n",
-        "        return hits"
+        "        hits = []\n",
+        "        if i != len(self.index) and self.index[i] == kmer:\n",
+        "            # if found, find all occurences in the text\n",
+        "            for j in range(len(t) - self.k + 1):\n",
+        "                if t[j:j + self.k] == kmer:\n",
+        "                    hits.append(j)\n",
+        "        return hits\n"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "P7J-dv4pEJmZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 48,
       "metadata": {
         "collapsed": true,
         "id": "jSp-DF2255Xr"
@@ -85,6 +80,9 @@
         "    \"\"\"Queries the index for pattern p in text t, using the index-object\"\"\"\n",
         "    k = index.k\n",
         "    offsets = []\n",
+        "    for i in index.query(p):\n",
+        "        if t[i:i+len(p)] == p:\n",
+        "            offsets.append(i)\n",
         "\n",
         "    return offsets"
       ]
@@ -104,27 +102,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 50,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UhYL-TN155Xs",
-        "outputId": "6be9d48b-873e-45e5-f89e-80bf69dea54c"
+        "outputId": "d10d8ceb-b53c-434a-b216-1db69da17ac2"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[36, 36]\n",
-            "[]\n"
+            "[21, 68]\n"
           ]
         }
       ],
       "source": [
         "index = Index(t, 4)\n",
-        "print(index.query(p))\n",
         "print(queryIndex(p, t, index)) # 21 68"
       ]
     },
@@ -139,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 45,
       "metadata": {
         "collapsed": true,
         "id": "RK1-MQ8r55Xt"
@@ -151,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 51,
       "metadata": {
         "collapsed": true,
         "id": "9KfmPTnf55Xu"
@@ -169,50 +165,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pNHIr6ci55Xv",
-        "outputId": "ec55de95-9524-492e-a621-9c8ff6363162"
+        "outputId": "b3dd331e-b454-4c5d-8839-ae2a032918af"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "F\n",
-            "======================================================================\n",
-            "FAIL: testQueryIndex (__main__.MyTest)\n",
+            ".\n",
             "----------------------------------------------------------------------\n",
-            "Traceback (most recent call last):\n",
-            "  File \"<ipython-input-27-80a0d1f3c122>\", line 7, in testQueryIndex\n",
-            "    self.assertEqual([21, 68], queryIndex(p, t, index))\n",
-            "AssertionError: Lists differ: [21, 68] != []\n",
+            "Ran 1 test in 0.003s\n",
             "\n",
-            "First list contains 2 additional elements.\n",
-            "First extra element 0:\n",
-            "21\n",
-            "\n",
-            "- [21, 68]\n",
-            "+ []\n",
-            "\n",
-            "----------------------------------------------------------------------\n",
-            "Ran 1 test in 0.002s\n",
-            "\n",
-            "FAILED (failures=1)\n"
+            "OK\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<unittest.runner.TextTestResult run=1 errors=0 failures=1>"
+              "<unittest.runner.TextTestResult run=1 errors=0 failures=0>"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 52
         }
       ],
       "source": [
